--- a/public/style.css
+++ b/public/style.css
@@ -10,3 +10,18 @@
 img {
   width: 500px;
 }
+
+body {
+  background-color: #d3d3d3;
+}
+
+h1 {
+  font-family: sans-serif;
+  font-size: 20;
+  text-align: center;
+}
+
+li {
+  font-family: 'Yantramanav', sans-serif;
+  font-size: 12;
+}
